--- a/index.html
+++ b/index.html
@@ -11,5 +11,6 @@
     <div id="root"></div>
     <script type="module" src="/src/main.tsx"></script>
     <script src="/node_modules/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
+    <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/2.0.4/socket.io.js"></script> -->
   </body>
 </html>
