--- a/index.html
+++ b/index.html
@@ -1,5 +1,14 @@
 <!doctype html>
 <html lang="en">
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-2G250QDZM2"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-2G250QDZM2');
+</script>
 
 <head>
   <meta charset="UTF-8" />
